# swc2mask

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  neuron.rs  render.rs  sdf.rs  util.rs  vec.rs
src/neuron/: error_kind.rs  node.rs  swc.rs
src/render/: accelerator.rs  anti_aliasing.rs  material.rs  object.rs  renderer.rs  scene.rs  tiff.rs
src/sdf/: combination.rs  round_cone.rs  sdf.rs  sphere.rs
