[package]
name = "swc2mask"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
image = "*"
indicatif = "*"
lazy_static = "*"
num_cpus = "*"
threadpool = "*"
tiff = "*"
